// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App/> renders correctly if contains children 1`] = `
<div
  className="AppStyled-kbfYzO gLeacj"
>
  <div
    className="TopRegionStyled-eOdIJY ljMgnx"
  >
    <div
      className="TopRegionContentStyled-hekJiL ljGiLz"
    />
  </div>
  <div
    className="MainRegionStyled-dlkgES jVcdao"
  >
    <div
      className="ContentStyled-aVpGE kseoPp"
    >
      <div>
        TEST
      </div>
    </div>
  </div>
  <div
    className="BottomRegionStyled-iiXgeL jrFnOw"
  >
    <div
      className="BottomRegionContentStyled-ioIXcD ftRIhW"
    />
  </div>
</div>
`;

exports[`<App/> renders correctly if prop fixed changing 1`] = `
<div
  className="AppStyled-kbfYzO gLeacj"
>
  <div
    className="MainRegionStyled-dlkgES jVcdao"
  >
    <div
      className="ContentStyled-aVpGE kseoPp"
    >
      <div>
        TEST
      </div>
    </div>
  </div>
</div>
`;

exports[`<App/> renders correctly if prop fixed changing 2`] = `
<div
  className="AppStyled-kbfYzO gLeacj"
>
  <div
    className="MainRegionStyled-dlkgES dHgXvA"
  >
    <div
      className="ContentStyled-aVpGE hQhiRR"
    >
      <div>
        TEST
      </div>
    </div>
  </div>
</div>
`;

exports[`<App/> renders correctly if prop fixed set false 1`] = `
<div
  className="AppStyled-kbfYzO gLeacj"
/>
`;

exports[`<App/> renders correctly if prop fixed set true 1`] = `
<div
  className="AppStyled-kbfYzO dvovdH"
/>
`;

exports[`<App/> renders correctly with default props 1`] = `
<div
  className="AppStyled-kbfYzO gLeacj"
/>
`;
